<resources>
    <string name="app_name">Biblioteca</string>
    <string name="home">Home</string>
    <string name="bemvindo">Sistema: BIBLIOTECA!</string>
    <string name="aluno">Aluno</string>
    <string name="aluguel">Aluguel</string>
    <string name="livro">Livro</string>
    <string name="revista">Revista</string>
    <string name="ra">RA</string>
    <string name="nome">Nome</string>
    <string name="email">E-mail</string>
    <string name="dataRetirada">Data de retirada</string>
    <string name="dataDevolucao">Data de devolução</string>
    <string name="codigo">Código</string>
    <string name="qtd">Quantidade de páginas</string>
    <string name="isbn">ISBN</string>
    <string name="issn">ISSN</string>
    <string name="edicao">Edição</string>
    <string name="buscar">Buscar</string>
    <string name="inserir">Inserir</string>
    <string name="alterar">Alterar</string>
    <string name="excluir">Excluir</string>
    <string name="listar">Listar</string>
</resources>